# pinescript_syntax_checker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pinescript_syntax_checker/: __init__.py  pinescript_checker.py  server.py
